--- a/settings.json
+++ b/settings.json
@@ -3,10 +3,10 @@
 "autoplaymusic": true,
 "autocomposing": true,
 "autorecording": true,
-"NamaBot":"ZukaChan", 
-"NomorOwner":"6281398860278",
-"Mail":"helgarestapi@gmail.com",
-"NamaOwner":"Helgaa", 
+"NamaBot":"Fie-Chan", 
+"NomorOwner":"6283804343232",
+"Mail":"riswangans03@gmail.com",
+"NamaOwner":"Wanz", 
 "lolkey": "beli ke gw",
 "vhtearkey": "beli ke gw",
 "HelKey": "kfL8EfHc"
